[gd_scene load_steps=24 format=3 uid="uid://cb5neqy7emqc7"]

[ext_resource type="FontFile" uid="uid://b7qr37dya6wcn" path="res://Alpha/fonts/gadugi-normal.ttf" id="1_mo5at"]
[ext_resource type="Texture2D" uid="uid://dfaba50u2g42i" path="res://Alpha/2D assets/Menus/Main_Menu/Sprites/OptionsMenu/Button.png" id="2_evwh3"]
[ext_resource type="Texture2D" uid="uid://mmwatou0j46d" path="res://Alpha/2D assets/Menus/Main_Menu/Sprites/OptionsMenu/ButtonPressed.png" id="2_mdatl"]
[ext_resource type="Script" uid="uid://chx7fww2oym4j" path="res://Alpha/Scripts/Menus/options_button.gd" id="2_pqh36"]
[ext_resource type="Texture2D" uid="uid://dnwbahod5sa8u" path="res://Alpha/2D assets/Menus/Main_Menu/Sprites/OptionsMenu/ButtonHighlighted.png" id="3_mo5at"]
[ext_resource type="Texture2D" uid="uid://b270udf4uevtb" path="res://Alpha/2D assets/Menus/Main_Menu/Sprites/OptionsMenu/Settings icon.png" id="6_whwut"]
[ext_resource type="Texture2D" uid="uid://c05rlgcyojnbp" path="res://Alpha/2D assets/Menus/Main_Menu/Sprites/OptionsMenu/Volume.png" id="7_gpw63"]
[ext_resource type="Texture2D" uid="uid://b1b47sno42wim" path="res://Alpha/2D assets/Menus/Main_Menu/Sprites/OptionsMenu/Graphics.png" id="8_2b5px"]
[ext_resource type="Texture2D" uid="uid://du3c6fitgsste" path="res://Alpha/2D assets/Menus/Main_Menu/Sprites/OptionsMenu/PC.png" id="9_ja0bj"]
[ext_resource type="Texture2D" uid="uid://fkb5e17wyebu" path="res://Alpha/2D assets/Menus/Main_Menu/Sprites/OptionsMenu/Controller.png" id="10_idcdj"]
[ext_resource type="Texture2D" uid="uid://bay4qjyk0uovo" path="res://Alpha/2D assets/Menus/UI/ResetCameraIcon.png" id="11_j8ife"]
[ext_resource type="Texture2D" uid="uid://dudamfwugiaxo" path="res://Alpha/2D assets/Menus/UI/FollowCameraIcon.png" id="12_qf3nc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bvere"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ttd52"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hh4c7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vbram"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3lwa5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uykle"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ren2j"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8huqi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t2j14"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8g2pc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xrcou"]

[node name="OptionsMenuButton" type="Button"]
custom_minimum_size = Vector2(130, 130)
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/align_to_largest_stylebox = 1
theme_override_fonts/font = ExtResource("1_mo5at")
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_bvere")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_ttd52")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_hh4c7")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_vbram")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_3lwa5")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_uykle")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ren2j")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_8huqi")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_t2j14")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_8g2pc")
theme_override_styles/normal = SubResource("StyleBoxEmpty_xrcou")
alignment = 2
script = ExtResource("2_pqh36")

[node name="ButtonPressed" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_mdatl")

[node name="ButtonHighlited" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_mo5at")

[node name="ButtonHighlight" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_evwh3")

[node name="SettingsIcon" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 1.0
offset_top = 11.0
offset_right = 128.0
offset_bottom = 127.0
texture = ExtResource("6_whwut")

[node name="VolumeIcon" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 1.0
offset_top = 11.0
offset_right = 41.0
offset_bottom = 51.0
texture = ExtResource("7_gpw63")

[node name="GraphicsIcon" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 1.0
offset_top = 11.0
offset_right = 41.0
offset_bottom = 51.0
texture = ExtResource("8_2b5px")

[node name="pcIcon" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 1.0
offset_top = 11.0
offset_right = 41.0
offset_bottom = 51.0
texture = ExtResource("9_ja0bj")

[node name="ControllerIcon" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 1.0
offset_top = 11.0
offset_right = 41.0
offset_bottom = 51.0
texture = ExtResource("10_idcdj")

[node name="ResetCameraIcon" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 1.0
offset_top = 11.0
offset_right = 41.0
offset_bottom = 51.0
texture = ExtResource("11_j8ife")

[node name="FollowCameraIcon" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 1.0
offset_top = 11.0
offset_right = 41.0
offset_bottom = 51.0
texture = ExtResource("12_qf3nc")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
